--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@
 body{
     max-width: 1100px;
     margin: auto;
-    font-family: Arial, Helvetica, sans-serif;
     margin-top: 2em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
@@ -21,32 +21,46 @@ h1{
 }
 
 header p{
-    padding-bottom: 1.5em;
+    padding-bottom: 2em;
 }
 
-.photos{
-    float: left;
-    height: 7.6em;
+
+.foto-align{
     vertical-align: middle;
-    padding-right: 1em;
+    display: inline-block;
+    
 }
 
-.box-style{
+.foto-size{
+    width: 120px;
+    padding-right: .5em;
+}
+
+.hole-box{
     background-color: black;
-    max-width: 350px;
-    border: 1px solid grey;
-    border-style:double;
+    color: white;
+    float: left;
+    padding-right: 1.5em;
+    margin-bottom: 1em;
+   
+    box-shadow: 5px 5px 5px grey;
 }
 
-.box-info{
-    color: white;
-    padding-top: 1em;
+.rectangle{
+    margin-right: 1em;
+}
 
+.text-pdd{
+    padding-top: .5em;
 }
 
 .email{
     display: block;
-    padding-top: 1em;
-    padding-bottom: .8em;
-    color: rgb(0, 174, 255);
+    padding-bottom: .5em;
+    color: rgb(35, 193, 242);
 }
+
+.dimension{
+    min-width: 200px;
+}
+
